// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bread crumbs Bread Crumbs Sample 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div>
      <span
        className="BreadCrumbs__Text-sc-19dvyv8-0 jdYcMP"
        onClick={[Function]}
      >
        首页 / 
      </span>
      <span
        className="BreadCrumbs__Text-sc-19dvyv8-0 ghkjta"
        onClick={[Function]}
      >
        审核概况  
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Card Sample 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <section
      className="Card-njhxya-0 gNICVC"
    >
      慈善活动信息
    </section>
  </div>
</div>
`;

exports[`Storyshots Carousel Carousel For Two Children 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Carousel__Wrapper-lcnnle-0 dwZQYT"
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="Carousel__ChildrenWrapper-lcnnle-1 bLIKlt"
      >
        <div
          className="Carousel__ChildWrapper-lcnnle-2 jrQxUA"
        >
          <div>
            2
          </div>
        </div>
        <div
          className="Carousel__ChildWrapper-lcnnle-2 jrQxUA"
        >
          <div>
            1
          </div>
        </div>
        <div
          className="Carousel__ChildWrapper-lcnnle-2 jrQxUA"
        >
          <div>
            2
          </div>
        </div>
      </div>
      <div
        className="Carousel__DotWrapper-lcnnle-3 juwIXA"
      >
        <div
          className="Carousel__Dot-lcnnle-4 iHOpZl"
        />
        <div
          className="Carousel__Dot-lcnnle-4 dGPhcS"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel Carousel Sample 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Carousel__Wrapper-lcnnle-0 dwZQYT"
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="Carousel__ChildrenWrapper-lcnnle-1 bLIKlt"
      >
        <div
          className="Carousel__ChildWrapper-lcnnle-2 jrQxUA"
        >
          <div>
            4
          </div>
        </div>
        <div
          className="Carousel__ChildWrapper-lcnnle-2 jrQxUA"
        >
          <div>
            1
          </div>
        </div>
        <div
          className="Carousel__ChildWrapper-lcnnle-2 jrQxUA"
        >
          <div>
            2
          </div>
        </div>
      </div>
      <div
        className="Carousel__DotWrapper-lcnnle-3 juwIXA"
      >
        <div
          className="Carousel__Dot-lcnnle-4 iHOpZl"
        />
        <div
          className="Carousel__Dot-lcnnle-4 dGPhcS"
        />
        <div
          className="Carousel__Dot-lcnnle-4 dGPhcS"
        />
        <div
          className="Carousel__Dot-lcnnle-4 dGPhcS"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Col Columns 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Layout__Row-sc-15i36wy-0 eDZNYR"
    >
      <div
        className="Layout__Col-sc-15i36wy-1 Gridsstories__StyledCol-sc-1nj2xtp-0 jPZixR"
        span={4}
      >
        <div>
          col-4
        </div>
      </div>
      <div
        className="Layout__Col-sc-15i36wy-1 Gridsstories__StyledCol-sc-1nj2xtp-0 jPZixR"
        span={4}
      >
        <div>
          col-4
        </div>
      </div>
      <div
        className="Layout__Col-sc-15i36wy-1 Gridsstories__StyledCol-sc-1nj2xtp-0 jPZixR"
        span={4}
      >
        <div>
          col-4
        </div>
      </div>
    </div>
    <div
      className="Layout__Row-sc-15i36wy-0 GPVWD"
    >
      <div
        className="Layout__Col-sc-15i36wy-1 Gridsstories__StyledCol-sc-1nj2xtp-0 dwVPje"
        span={3}
      >
        <div>
          col-4
        </div>
      </div>
      <div
        className="Layout__Col-sc-15i36wy-1 Gridsstories__StyledCol-sc-1nj2xtp-0 dwVPje"
        span={3}
      >
        <div>
          col-4
        </div>
      </div>
      <div
        className="Layout__Col-sc-15i36wy-1 Gridsstories__StyledCol-sc-1nj2xtp-0 dwVPje"
        span={3}
      >
        <div>
          col-4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DefaultStyle Buttons 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <button>
      默认按钮
    </button>
    <button
      className="createDefaultStylestories__CustomButton-vq0xth-0 dfAxJV"
    >
      自定义样式按钮
    </button>
    <button
      disabled={true}
    >
      禁用按钮
    </button>
  </div>
</div>
`;

exports[`Storyshots DefaultStyle Customized Style 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <button>
      背景红色字体灰色
    </button>
  </div>
</div>
`;

exports[`Storyshots DefaultStyle Input Validity 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <div>
    <label>
      手机号：
      <input
        onChange={[Function]}
        placeholder="请输入文本"
        required={true}
        type="text"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots DefaultStyle Inputs 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <div>
    <label>
      手机号：
      <input
        placeholder="请输入文本"
        required={true}
        type="text"
      />
    </label>
    <label>
      手机号：
      <input
        placeholder="请输入手机号"
        type="tel"
      />
    </label>
    <label>
      按钮：
      <input
        type="button"
        value="按钮"
      />
    </label>
    <label>
      选项框：
      <input
        type="checkbox"
        value="选项框"
      />
    </label>
    <label>
      单选框：
      <input
        type="radio"
        value="单选框"
      />
    </label>
    <label>
      颜色选择器：
      <input
        type="color"
        value="#FFB931"
      />
    </label>
    <label>
      日期：
      <input
        id="start"
        max="2018-12-31"
        min="2018-01-01"
        name="trip-start"
        onChange={[Function]}
        type="date"
        value="2018-07-22"
      />
    </label>
    <label>
      时间选择器：
      <input
        id="meeting-time"
        max="2018-06-14T00:00"
        min="2018-06-07T00:00"
        name="meeting-time"
        type="datetime-local"
        value="2018-06-12T19:30"
      />
    </label>
    <label>
      邮箱：
      <input
        id="email"
        pattern=".+@globex.com"
        required={true}
        size={30}
        type="email"
      />
    </label>
    <label>
      文件：
      <input
        accept="image/png, image/jpeg"
        id="avatar"
        name="avatar"
        type="file"
      />
    </label>
    <label>
      图片：
      <input
        alt="Login"
        id="image"
        src="https://interactive-examples.mdn.mozilla.net/media/examples/login-button.png"
        type="image"
      />
    </label>
    <label>
      年月：
      <input
        id="start"
        min="2018-03"
        name="start"
        type="month"
        value="2018-05"
      />
    </label>
    <label>
      数字：
      <input
        list="num-options"
        max="100"
        min="10"
        type="number"
      />
    </label>
    <datalist
      id="num-options"
    >
      <option>
        20
      </option>
      <option>
        30
      </option>
      <option>
        40
      </option>
    </datalist>
    <label>
      密码：
      <input
        id="pass"
        minLength={8}
        name="password"
        required={true}
        type="password"
      />
    </label>
    <label>
      滑动选择：
      <input
        id="cowbell"
        max="100"
        min="0"
        name="cowbell"
        step="10"
        type="range"
        value="90"
      />
    </label>
    <label>
      搜索：
      <input
        aria-label="Search through site content"
        id="site-search"
        name="q"
        type="search"
      />
    </label>
    <input
      type="submit"
      value="Send Request"
    />
    <label>
      电话：
      <input
        id="phone"
        name="phone"
        pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
        required={true}
        type="tel"
      />
    </label>
    <label>
      时间：
      <input
        id="appt"
        max="18:00"
        min="09:00"
        name="appt"
        required={true}
        type="time"
      />
    </label>
    <label>
      URL：
      <input
        id="url"
        name="url"
        pattern="https://.*"
        placeholder="https://example.com"
        required={true}
        size={30}
        type="url"
      />
    </label>
    <label>
      工作周：
      <input
        id="camp-week"
        max="2018-W26"
        min="2018-W18"
        name="week"
        required={true}
        type="week"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots DefaultStyle Li 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <ul>
      <li>
        列表描述1
      </li>
      <li>
        列表描述2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Input Block Illegal Input 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <label>
      劫持非法输入：
      <div
        className="Input__InputWrapper-msw3o0-0 dCjatg"
        placeholder="请输入身份证号"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          pattern="^\\\\d{6}(18|19|20)?\\\\d{2}(0[1-9]|1[012])(0[1-9]|[12]\\\\d|3[01])\\\\d{3}(\\\\d|[xX])$"
          placeholder="请输入身份证号"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Input List Attribute 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <label>
      邮箱：
      <div
        className="Input__InputWrapper-msw3o0-0 jJxtZG"
        placeholder="请输入邮箱"
      >
        <input
          list="email-options"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入邮箱"
          type="email"
        />
      </div>
    </label>
    <datalist
      id="email-options"
    >
      <option>
        yuquanwang1990@icloud.com
      </option>
      <option>
        yuquanwang1990@163.com
      </option>
    </datalist>
  </div>
</div>
`;

exports[`Storyshots Input Number Input 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <label>
      数字：
      <div
        className="Input__InputWrapper-msw3o0-0 jJxtZG"
        max="50000"
        placeholder="5的倍数"
      >
        <input
          max={50000}
          min={5}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="5的倍数"
          step={5}
          type="number"
        />
      </div>
    </label>
    <label>
      数字：
      <div
        className="Input__InputWrapper-msw3o0-0 cuEHzP"
        max="1"
        placeholder="小数"
      >
        <input
          max={1}
          min={0.1}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="小数"
          step={0.1}
          type="number"
        />
      </div>
    </label>
    <label>
      数字：
      <div
        className="Input__InputWrapper-msw3o0-0 cuEHzP"
        placeholder="列表选择"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="列表选择"
          type="number"
        />
      </div>
    </label>
    <datalist
      id="number-options"
    >
      <option>
        20
      </option>
      <option>
        30
      </option>
    </datalist>
  </div>
</div>
`;

exports[`Storyshots Input Prefix Suffix 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <div>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud"
        placeholder="请输入手机号"
      >
        <div>
          +86
        </div>
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
      </div>
    </label>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud"
        placeholder="请输入手机号"
      >
        <div>
          +86
        </div>
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
        <div>
          china
        </div>
      </div>
    </label>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud Inputstories__StyledInput-y9am8d-0 jGNbOr"
        placeholder="请输入手机号"
      >
        <div>
          +86
        </div>
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
        <div>
          china
        </div>
      </div>
    </label>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud"
        placeholder="请输入手机号"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
        <div>
          <div />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Input Type Compatibility 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <div>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud"
        placeholder="请输入手机号"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
      </div>
    </label>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud Inputstories__StyledInput-y9am8d-0 jGNbOr"
        placeholder="请输入手机号"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
        <div>
          china
        </div>
      </div>
    </label>
    <label>
      手机号：
      <div
        className="Input__InputWrapper-msw3o0-0 lneFud"
        placeholder="请输入手机号"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="请输入手机号"
          type="tel"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Input Validity Effects 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
  style={
    Object {
      "background": "#fff",
    }
  }
>
  <div>
    <label>
      手机号： 
      <div
        className="Input__InputWrapper-msw3o0-0 cuEHzP"
        placeholder="必填"
      >
        <input
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="必填"
          required={true}
          type="tel"
        />
      </div>
    </label>
    <label>
      手机号： 
      <div
        className="Input__InputWrapper-msw3o0-0 jJxtZG"
        placeholder="最长11位"
      >
        <div>
          +86
        </div>
        <input
          maxLength={11}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="最长11位"
          required={true}
          type="tel"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Mask Opacity Check 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    测试透明度
    <div
      className="Mask-sc-1c0etpv-0 Maskstories__Opacity-sc-1f5rv6q-0 cleHjV"
      opacity={0.6}
    />
  </div>
</div>
`;

exports[`Storyshots Modal Confirmable Modal 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
    >
      <section
        className="Card-njhxya-0 Modal__StyledCard-z04xxq-1 kKcSYJ"
      >
        Content
        <div
          className="Modal__CancelConfirm-z04xxq-2 kclbua"
        >
          <button
            onClick={[Function]}
          >
            取消
          </button>
          <button
            onClick={[Function]}
          >
            确认
          </button>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Content Modal 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
    >
      <section
        className="Card-njhxya-0 Modal__StyledCard-z04xxq-1 YHoQg"
      >
        Content
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Page Cover 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Storyshots Picker Columns 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
      onClick={[Function]}
    />
    <div
      className="Popup__StyledCard-ytusrp-0 kAcUDP"
      onClick={[Function]}
    >
      <div
        className="Popup__Children-ytusrp-1 dRwEmD Picker__StylePopup-sc-1xtmg8c-5 cWaOMY"
      >
        <div
          className="Picker__Header-sc-1xtmg8c-0 iUmqnL"
        >
          选择器
          <span
            className="Picker__StyledSpan-sc-1xtmg8c-1 idhEPX"
            onClick={[Function]}
          >
            确定
          </span>
        </div>
        <div
          className="Picker__ColumnsWrapper-sc-1xtmg8c-6 cMZMkU"
        >
          <div
            className="Picker__TouchListener-sc-1xtmg8c-2 cyWJMy"
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 darNqF"
                onClick={[Function]}
              >
                1
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                2
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
            </div>
          </div>
          <div
            className="Picker__TouchListener-sc-1xtmg8c-2 cyWJMy"
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 darNqF"
                onClick={[Function]}
              >
                11
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                12
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                13
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                14
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                15
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                16
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                17
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                18
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                19
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
            </div>
          </div>
          <div
            className="Picker__SelectedBar-sc-1xtmg8c-4 gZA-dQk"
            onTouchEnd={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Picker Confirm Event 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
      onClick={[Function]}
    />
    <div
      className="Popup__StyledCard-ytusrp-0 kAcUDP"
      onClick={[Function]}
    >
      <div
        className="Popup__Children-ytusrp-1 dRwEmD Picker__StylePopup-sc-1xtmg8c-5 cWaOMY"
      >
        <div
          className="Picker__Header-sc-1xtmg8c-0 iUmqnL"
        >
          选择器
          <span
            className="Picker__StyledSpan-sc-1xtmg8c-1 idhEPX"
            onClick={[Function]}
          >
            确定
          </span>
        </div>
        <div
          className="Picker__ColumnsWrapper-sc-1xtmg8c-6 cMZMkU"
        >
          <div
            className="Picker__TouchListener-sc-1xtmg8c-2 cyWJMy"
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 darNqF"
                onClick={[Function]}
              >
                1
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                2
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
            </div>
          </div>
          <div
            className="Picker__TouchListener-sc-1xtmg8c-2 cyWJMy"
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 darNqF"
                onClick={[Function]}
              >
                11
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                12
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                13
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                14
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                15
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                16
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                17
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                18
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                19
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
            </div>
          </div>
          <div
            className="Picker__SelectedBar-sc-1xtmg8c-4 gZA-dQk"
            onTouchEnd={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Picker Picker Wrapper 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
      onClick={[Function]}
    />
    <div
      className="Popup__StyledCard-ytusrp-0 kAcUDP"
      onClick={[Function]}
    >
      <div
        className="Popup__Children-ytusrp-1 dRwEmD Picker__StylePopup-sc-1xtmg8c-5 cWaOMY"
      >
        <div
          className="Picker__Header-sc-1xtmg8c-0 iUmqnL"
        >
          选择器
          <span
            className="Picker__StyledSpan-sc-1xtmg8c-1 idhEPX"
            onClick={[Function]}
          >
            确定
          </span>
        </div>
        <div
          className="Picker__ColumnsWrapper-sc-1xtmg8c-6 cMZMkU"
        >
          <div
            className="Picker__TouchListener-sc-1xtmg8c-2 cyWJMy"
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 darNqF"
                onClick={[Function]}
              >
                一
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                二
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                三
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                四
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                五
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                六
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                七
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                八
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                九
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                十
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
            </div>
          </div>
          <div
            className="Picker__SelectedBar-sc-1xtmg8c-4 gZA-dQk"
            onTouchEnd={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Picker Scroller 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
      onClick={[Function]}
    />
    <div
      className="Popup__StyledCard-ytusrp-0 kAcUDP"
      onClick={[Function]}
    >
      <div
        className="Popup__Children-ytusrp-1 dRwEmD Picker__StylePopup-sc-1xtmg8c-5 cWaOMY"
      >
        <div
          className="Picker__Header-sc-1xtmg8c-0 iUmqnL"
        >
          选择器
          <span
            className="Picker__StyledSpan-sc-1xtmg8c-1 idhEPX"
            onClick={[Function]}
          >
            确定
          </span>
        </div>
        <div
          className="Picker__ColumnsWrapper-sc-1xtmg8c-6 cMZMkU"
        >
          <div
            className="Picker__TouchListener-sc-1xtmg8c-2 cyWJMy"
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 darNqF"
                onClick={[Function]}
              >
                一
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                二
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                三
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                四
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                五
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                六
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                七
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                八
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                九
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
                onClick={[Function]}
              >
                十
              </div>
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
              <div
                className="Picker__StyledItem-sc-1xtmg8c-3 dabOql"
              />
            </div>
          </div>
          <div
            className="Picker__SelectedBar-sc-1xtmg8c-4 gZA-dQk"
            onTouchEnd={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Popup Popup Sample 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Mask-sc-1c0etpv-0 leillc"
      onClick={[Function]}
    />
    <div
      className="Popup__StyledCard-ytusrp-0 kAcUDP"
      onClick={[Function]}
    >
      <h2
        className="Popup__Title-ytusrp-2 hCoRxr"
      >
        sample
      </h2>
      <div
        className="Popup__Children-ytusrp-1 dUrVmC"
        title="sample"
      >
        <p>
          popup content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs Tabs With Children 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    测试透明度
    <div
      className="Tabs__Wrapper-sc-5j2wgj-0 eebXhm"
    >
      <nav
        className="Tabs__LabelWrapper-sc-5j2wgj-1 ckRJXF"
      >
        <button
          className="Tabsstories__Button-dzcyvx-0 hQTdNX"
          onClick={[Function]}
        >
          first
        </button>
        <button
          className="Tabsstories__Button-dzcyvx-0 hQTdNX"
          onClick={[Function]}
        >
          second
        </button>
        <button
          className="Tabsstories__Button-dzcyvx-0 hQTdNX"
          onClick={[Function]}
        >
          third
        </button>
        <div
          className="Tabs__Indicator-sc-5j2wgj-2 bqVwok"
        />
      </nav>
      <section
        className="Tabs__ChildrenWindow-sc-5j2wgj-4 RHjsc"
      >
        <div
          className="Tabs__ChildrenWrapper-sc-5j2wgj-5 cMobtU"
        >
          <div
            className="Tabs__ChildWindow-sc-5j2wgj-3 lmWnOj"
          >
            <ul
              className="Tabsstories__Ul-dzcyvx-1 ljfJDE"
            >
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
              <li>
                first
              </li>
            </ul>
          </div>
          <div
            className="Tabs__ChildWindow-sc-5j2wgj-3 lmWnOj"
          >
            <ul
              className="Tabsstories__Ul-dzcyvx-1 ljfJDE"
            >
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
              <li>
                second
              </li>
            </ul>
          </div>
          <div
            className="Tabs__ChildWindow-sc-5j2wgj-3 lmWnOj"
          >
            <ul
              className="Tabsstories__Ul-dzcyvx-1 ljfJDE"
            >
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
              <li>
                third
              </li>
            </ul>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs Tabs Without Children 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    测试透明度
    <div
      className="Tabs__Wrapper-sc-5j2wgj-0 eebXhm"
    >
      <nav
        className="Tabs__LabelWrapper-sc-5j2wgj-1 ckRJXF"
      >
        <button
          className="Tabsstories__Button-dzcyvx-0 hQTdNX"
          onClick={[Function]}
        >
          first
        </button>
        <button
          className="Tabsstories__Button-dzcyvx-0 hQTdNX"
          onClick={[Function]}
        >
          second
        </button>
        <button
          className="Tabsstories__Button-dzcyvx-0 hQTdNX"
          onClick={[Function]}
        >
          third
        </button>
        <div
          className="Tabs__Indicator-sc-5j2wgj-2 bqVwok"
        />
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast Default Toast 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Toast__Page-uuiuf0-0 bTKBap"
    >
      <div
        className="Mask-sc-1c0etpv-0 Toast__Masked-uuiuf0-1 iRnWVt"
      >
        请输入正确的医保卡号
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast Loading Toast 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Toast__Page-uuiuf0-0 bTKBap"
    >
      <div
        className="Mask-sc-1c0etpv-0 Toast__Masked-uuiuf0-1 iRnWVt"
      >
        <div
          className="Toast__StyledIcon-uuiuf0-2 Toast__Loading-uuiuf0-3 cggLmr"
        />
        加载中
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast Success Toast 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Toast__Page-uuiuf0-0 bTKBap"
    >
      <div
        className="Mask-sc-1c0etpv-0 Toast__Masked-uuiuf0-1 iRnWVt"
      >
        <div
          className="Toast__StyledIcon-uuiuf0-2 Toast__Success-uuiuf0-4 gKefQn"
        />
        操作成功
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tree Custom Tree 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Tree__TreeBody-sc-1d1byep-0 eaRHXt"
      style={
        Object {
          "flexShrink": 0,
          "width": "100%",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "background": "#d9d9d9",
              "display": "flex",
              "flexWrap": "wrap",
              "marginBottom": "20px",
              "padding": "24px",
              "verticalAlign": "top",
            }
          }
        >
          <div
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            <div
              className="Treestories__MyIcon-efzm6z-0 jGrwQp"
              onClick={[Function]}
            >
               
              +
               
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  Object {
                    "fontSize": "20px",
                  }
                }
              >
                第一中学
              </div>
              <div
                style={
                  Object {
                    "color": "#91d5ff",
                  }
                }
              >
                国立
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style={
            Object {
              "background": "#d9d9d9",
              "display": "flex",
              "flexWrap": "wrap",
              "marginBottom": "20px",
              "padding": "24px",
              "verticalAlign": "top",
            }
          }
        >
          <div
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            <div
              className="Treestories__MyIcon-efzm6z-0 jGrwQp"
              onClick={[Function]}
            >
               
              +
               
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "justifyContent": "space-between",
                }
              }
            >
              <div
                style={
                  Object {
                    "fontSize": "20px",
                  }
                }
              >
                胜育强中学
              </div>
              <div
                style={
                  Object {
                    "color": "#f4ffb8",
                  }
                }
              >
                私立
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tree Simple 1`] = `
<div
  className="Page__StyledDiv-sc-1yvvn5k-0 jWJTnF"
>
  <div>
    <div
      className="Tree__TreeBody-sc-1d1byep-0 eaRHXt"
      style={
        Object {
          "flexShrink": 0,
          "width": "100%",
        }
      }
    >
      <div>
        <div
          style={
            Object {
              "display": "flex",
              "flexWrap": "wrap",
              "verticalAlign": "top",
            }
          }
        >
          <div
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            <div>
              <button
                className="FoldIcon__FoldButton-sc-1ai2c6k-0 jdIWYi"
                onClick={[Function]}
              >
                +
              </button>
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fffbe6",
                }
              }
            >
              浙江
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style={
            Object {
              "display": "flex",
              "flexWrap": "wrap",
              "verticalAlign": "top",
            }
          }
        >
          <div
            style={
              Object {
                "visibility": "hidden",
              }
            }
          >
            <div>
              <button
                className="FoldIcon__FoldButton-sc-1ai2c6k-0 jdIWYi"
                onClick={[Function]}
              >
                +
              </button>
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fffbe6",
                }
              }
            >
              北京
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style={
            Object {
              "display": "flex",
              "flexWrap": "wrap",
              "verticalAlign": "top",
            }
          }
        >
          <div
            style={
              Object {
                "visibility": "visible",
              }
            }
          >
            <div>
              <button
                className="FoldIcon__FoldButton-sc-1ai2c6k-0 jdIWYi"
                onClick={[Function]}
              >
                +
              </button>
            </div>
          </div>
          <div
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fffbe6",
                }
              }
            >
              四川
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
